--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prime Number</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <table>
+    <table align="center">
         <tr>
             <td colspan="2"><h2>Check  Number Is Prime Or Not</h2></td>
         </tr>
         <tr>
-            <td><label for="num"><b>Enter the Number</b></label></td>
+            <td><label for="num"><b>Enter the Number :</b></label></td>
             <td> <input type="number" id="num"></td>
         </tr>
         <tr>
             <td colspan="2"><button onclick="prime()"><b>Check</b></button></td>
         </tr>
         <tr> 
-            <td><label for="result"><b>Result Is</b></label></td>
+            <td><label for="result"><b>Result Is :</b></label></td>
             <td><input type="text" id="result" placeholder="Result Will Print Here"></td>
         </tr>
     </table>
