operational functions are addede in js file

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prime Number</title>
     <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
 </head>
 <body>
     <table align="center">
@@ -13,8 +14,8 @@
             <td colspan="2"><h2>Check  Number Is Prime Or Not</h2></td>
         </tr>
         <tr>
-            <td><label for="num"><b>Enter the Number :</b></label></td>
-            <td> <input type="number" id="num"></td>
+            <td><label for="number"><b>Enter the Number :</b></label></td>
+            <td> <input type="number" id="number"></td>
         </tr>
         <tr>
             <td colspan="2"><button onclick="prime()"><b>Check</b></button></td>
