readonly attribute added to input field of css file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </tr>
         <tr> 
             <td><label for="result"><b>Result Is :</b></label></td>
-            <td><input type="text" id="result" placeholder="Result Will Print Here"></td>
+            <td><input type="text" id="result" placeholder="Result Will Print Here" readonly></td>
         </tr>
     </table>
     
