--- a/index.html
+++ b/index.html
@@ -14,17 +14,25 @@
             <td colspan="2"><h2>Check  Number Is Prime Or Not</h2></td>
         </tr>
         <tr>
-            <td><label for="number"><b>Enter the Number :</b></label></td>
-            <td> <input type="number" id="number"></td>
+            <td><label for="input"><b>Enter the Number :</b></label></td>
+            <td> <input type="number" id="input"></td>
         </tr>
         <tr>
-            <td colspan="2"><button onclick="prime()"><b>Check</b></button></td>
+            <td colspan="2"><button onclick="prime()" id="check"><b>Check</b></button></td>
         </tr>
         <tr> 
             <td><label for="result"><b>Result Is :</b></label></td>
             <td><input type="text" id="result" placeholder="Result Will Print Here" readonly></td>
         </tr>
     </table>
+<script>
+var input = document.getElementById("input");
+input.addEventListener("keypress", function(event) {
+  if (event.key === "Enter") {
+    document.getElementById("check").click();
+  }
+});
+</script>
     
 </body>
 </html>
